--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Personal Details</h2>
             <!-- Add your personal details here -->
             <p>Name: Vipul Pun</p>
-            <p>Email: vipul@gmail.com</p>
+            <p>Email: pm.vipul@gmail.com</p>
             <p>Phone: 9822533399</p>
             <p>Phone: 9860979547</p>
         </section>
