--- a/index.html
+++ b/index.html
@@ -1,61 +1,50 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Vipul Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+<section id="about" class="about">
+  <div class="main">
+    <div class="about-text">
+      <h2 style="text-align: center;">About Me</h2>
+      <p>
+        I am a <strong>Software Engineer</strong> with hands-on experience in building and deploying
+        scalable web applications and APIs. Skilled in <b>ASP.NET Core, Angular, React,
+        Entity Framework, and Microsoft Identity</b>, with strong expertise in authentication,
+        authorization, and integration of third-party services.  
+        <br><br>
+        I have implemented real-world solutions such as <b>biometric attendance systems,
+        payment services, Kanban dashboards, and content management platforms</b>.
+        My greatest passion is leveraging technical know-how to solve problems
+        that benefit people and organizations.
+      </p>
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+      <h3><i class="fas fa-user-graduate"></i> Education</h3>
+      <ul>
+        <li><strong>Bachelor in Computer Engineering</strong> – Himalaya College of Engineering (2017 – 2023)</li>
+        <li><strong>+2 Science</strong> – Trinity International College (2015 – 2017)</li>
+        <li><strong>School Leaving Certificate</strong> – Deep Jyoti Vidyashram (2005 – 2015)</li>
+      </ul>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <h3><i class="fas fa-laptop-code"></i> Technical Skills</h3>
+      <p>
+        <b>Backend:</b> ASP.NET Core MVC, Web API, Entity Framework, Identity, DDD<br>
+        <b>Frontend:</b> Angular, React, Tailwind, shadcn/ui<br>
+        <b>Databases:</b> SQL Server, EF Code-First<br>
+        <b>Tools & Testing:</b> xUnit, Moq, Integration Testing<br>
+        <b>Others:</b> Biometric Device Integration (ZKTeco), Stripe Payments, Image Storage Service
+      </p>
 
-</head>
-<body>
-	<div class="hero">
-		<nav>
-			<h2 class="logo">Portfo<span>lio</span></h2>
-			<ul>
-				<li><a href="https://github.com/Vipulpm"><i class="fab fa-github"></i> Github</a></li>
-				<li><a href="https://www.linkedin.com/in/vipul-pun-7a8345246/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-				<li><a href="https://www.instagram.com/vipul_pun/"><i class="fab fa-instagram"></i> Instagram</a></li>
-				<li><a href="https://www.youtube.com/channel/UCVuE0FEU_cf0NShaW15zs-w"><i class="fab fa-youtube"></i> Youtube</a></li>
-				<li><a href="#about">About Me</a></li>
-			</ul>
-		</nav>
-		<div class="content">
-			<h4>Hello, my name is</h4>
-			<h1>Vipul <span>Pun</span></h1>
-			<h3>Software Engineer</h3>
-			<div class="newslatter">
-				<form>
-					<input type="email" name="email" id="mail" placeholder="Enter Your Email">
-					<input type="submit" name="submit" value="Lets Start">
-				</form>
-			</div>
-		</div>
-	</div>
-	<section id="about" class="about">
-		<div class="main">
-			<div class="about-text">
-				<h3><div style="text-align: center;">About Me</div></h3>
-				<p>I am a highly competent IT professional with a proven track record in designing websites, networking and managing databases. I
-					have strong technical skills as well as excellent interpersonal skills, enabling me to interact with a wide range ofclients. I am eager to
-					be challenged in order to grow and further improve my IT skills. My greatest passion is in life is using my technical know-how to
-					benefit other people and organizations.</p>
-				<h4>Education</h4><br>
-				<p><span>Bahcelor in Computer Engineering</span> <br> Himalaya College of Engineering : Sep,2017 - Feb,2023</p>
-				<p><span>+2 Science Stream</span> <br> Trinity International College : Aug,2015 - Feb,2017</p>
-				<p><span>School Leaving Certificate</span> <br> Deep Jyoti Vidyashram : Sep,2005 - Feb,2015</p>
-				<h4>Skills</h4><br>
-				<p>Asp.Net MVC, Asp.Net Web API, C-Programming,C++ Programming, Html/css, Video Editing and Photoshop</p><br>
-				<h4>Contact</h4>
-				<p><span>Mobile : 9822533399, 9860979547 <br> Email : pm.vipul@gmail.com</spa></p>
-				<button type="button">Let's Talk</button>
-			</div>
-		</div>
-	</section>
-	<footer>
-		<div class="end">All Right Reserve &copy; Copyright By VipCode</div>
-	</footer>
-</body>
-</html>
+      <h3><i class="fas fa-briefcase"></i> Highlight Projects</h3>
+      <ul>
+        <li>🔹 <b>Attendance System</b> – Integrated ZKTeco biometric device with .NET API.</li>
+        <li>🔹 <b>Authentication</b> – Google Login & token management with AspNetUserTokens.</li>
+        <li>🔹 <b>Task Dashboard</b> – Kanban system with real-time task tracking.</li>
+        <li>🔹 <b>Payment Service</b> – DDD-based Stripe integration with exception handling.</li>
+        <li>🔹 <b>Content Management</b> – CRUD with tags, media, and slugs.</li>
+      </ul>
+
+      <h3><i class="fas fa-address-book"></i> Contact</h3>
+      <p>
+        📞 Mobile: 9822533399, 9860979547 <br>
+        📧 Email: <a href="mailto:pm.vipul@gmail.com">pm.vipul@gmail.com</a>
+      </p>
+      <button type="button">Let's Talk</button>
+    </div>
+  </div>
+</section>
