--- a/index.html
+++ b/index.html
@@ -1,3 +1,51 @@
+<!DOCTYPE html>
+<html> 
+  <head> 
+    <title>Vipul Portfolio</title> 
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
+  </head> 
+  <body> 
+    <div class="hero"> 
+      <nav> 
+        <h2 class="logo">Portfo<span>lio</span></h2> 
+        <ul> 
+          <li>
+            <a href="https://github.com/Vipulpm">
+              <i class="fab fa-github"></i> Github
+            </a>
+          </li> 
+          <li>
+            <a href="https://www.linkedin.com/in/vipul-pun-7a8345246/">
+              <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
+          </li> 
+          <li>
+            <a href="https://www.instagram.com/vipul_pun/">
+              <i class="fab fa-instagram"></i> Instagram
+            </a>
+          </li> 
+          <li>
+            <a href="https://www.youtube.com/channel/UCVuE0FEU_cf0NShaW15zs-w">
+              <i class="fab fa-youtube"></i> Youtube</a>
+          </li> 
+          <li>
+            <a href="#about">About Me</a>
+          </li> 
+        </ul> 
+      </nav> 
+      <div class="content"> 
+        <h4>Hello, my name is</h4> 
+        <h1>Vipul <span>Pun</span></h1> 
+        <h3>Software Engineer</h3> 
+        <div class="newslatter"> 
+          <form> <input type="email" name="email" id="mail" placeholder="Enter Your Email"> <input type="submit" name="submit" value="Lets Start"> 
+          </form> 
+        </div> 
+      </div> 
+    </div> 
 <section id="about" class="about">
   <div class="main">
     <div class="about-text">
@@ -31,14 +79,13 @@
       </p>
 
       <h3><i class="fas fa-briefcase"></i> Highlight Projects</h3>
-      <ul>
-        <li>🔹 <b>Attendance System</b> – Integrated ZKTeco biometric device with .NET API.</li>
-        <li>🔹 <b>Authentication</b> – Google Login & token management with AspNetUserTokens.</li>
-        <li>🔹 <b>Task Dashboard</b> – Kanban system with real-time task tracking.</li>
-        <li>🔹 <b>Payment Service</b> – DDD-based Stripe integration with exception handling.</li>
-        <li>🔹 <b>Content Management</b> – CRUD with tags, media, and slugs.</li>
-      </ul>
-
+      <ol>
+        <li><b>Attendance System</b> – Integrated ZKTeco biometric device with .NET API.</li>
+        <li><b>Authentication</b> – Google Login & token management with AspNetUserTokens.</li>
+        <li><b>Task Dashboard</b> – Kanban system with real-time task tracking.</li>
+        <li><b>Payment Service</b> – DDD-based Stripe integration with exception handling.</li>
+        <li><b>Content Management</b> – CRUD with tags, media, and slugs.</li>
+      </ol>
       <h3><i class="fas fa-address-book"></i> Contact</h3>
       <p>
         📞 Mobile: 9822533399, 9860979547 <br>
@@ -48,3 +95,8 @@
     </div>
   </div>
 </section>
+    <footer> 
+      <div class="end">All Right Reserve &copy; Copyright By VipCode</div> 
+    </footer> 
+  </body> 
+</html>
