--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
       </p>
 
       <h3><i class="fas fa-user-graduate"></i> Education</h3>
-      <ul>
+      <ol>
         <li><strong>Bachelor in Computer Engineering</strong> – Himalaya College of Engineering (2017 – 2023)</li>
         <li><strong>+2 Science</strong> – Trinity International College (2015 – 2017)</li>
         <li><strong>School Leaving Certificate</strong> – Deep Jyoti Vidyashram (2005 – 2015)</li>
-      </ul>
+      </ol>
 
       <h3><i class="fas fa-laptop-code"></i> Technical Skills</h3>
-      <p>
-        <b>Backend:</b> ASP.NET Core MVC, Web API, Entity Framework, Identity, DDD<br>
-        <b>Frontend:</b> Angular, React, Tailwind, shadcn/ui<br>
-        <b>Databases:</b> SQL Server, EF Code-First<br>
-        <b>Tools & Testing:</b> xUnit, Moq, Integration Testing<br>
-        <b>Others:</b> Biometric Device Integration (ZKTeco), Stripe Payments, Image Storage Service
-      </p>
+      <ol>
+        <li><b>Backend:</b> ASP.NET Core MVC, Web API, Entity Framework, Identity, DDD</li>
+        <li><b>Frontend:</b> Angular, React, Tailwind, shadcn/ui</li>
+        <li><b>Databases:</b> SQL Server, EF Code-First</li>
+        <li><b>Tools & Testing:</b> xUnit, Moq, Integration Testing</li>
+        <li><b>Others:</b> Biometric Device Integration (ZKTeco), Stripe Payments, Image Storage Service</li>
+      </ol>
 
       <h3><i class="fas fa-briefcase"></i> Highlight Projects</h3>
       <ol>
@@ -86,10 +86,11 @@
         <li><b>Payment Service</b> – DDD-based Stripe integration with exception handling.</li>
         <li><b>Content Management</b> – CRUD with tags, media, and slugs.</li>
       </ol>
+
       <h3><i class="fas fa-address-book"></i> Contact</h3>
       <p>
-        📞 Mobile: 9822533399, 9860979547 <br>
-        📧 Email: <a href="mailto:pm.vipul@gmail.com">pm.vipul@gmail.com</a>
+        1. 📞 Mobile: 9822533399, 9860979547 <br>
+        2. 📧 Email: <a href="mailto:pm.vipul@gmail.com">pm.vipul@gmail.com</a>
       </p>
       <button type="button">Let's Talk</button>
     </div>
@@ -100,3 +101,4 @@
     </footer> 
   </body> 
 </html>
+
