--- a/index.html
+++ b/index.html
@@ -1,105 +1,86 @@
 <!DOCTYPE html>
-<html> 
-  <head> 
-    <title>Vipul Portfolio</title> 
-    <link rel="stylesheet" type="text/css" href="css/style.css"> 
-    link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
-  </head> 
-  <body> 
-    <div class="hero"> 
-      <nav> 
-        <h2 class="logo">Portfo<span>lio</span></h2> 
-        <ul> 
-          <li>
-            <a href="https://github.com/Vipulpm">
-              <i class="fab fa-github"></i> Github
-            </a>
-          </li> 
-          <li>
-            <a href="https://www.linkedin.com/in/vipul-pun-7a8345246/">
-              <i class="fab fa-linkedin"></i> LinkedIn
-            </a>
-          </li> 
-          <li>
-            <a href="https://www.instagram.com/vipul_pun/">
-              <i class="fab fa-instagram"></i> Instagram
-            </a>
-          </li> 
-          <li>
-            <a href="https://www.youtube.com/channel/UCVuE0FEU_cf0NShaW15zs-w">
-              <i class="fab fa-youtube"></i> Youtube</a>
-          </li> 
-          <li>
-            <a href="#about">About Me</a>
-          </li> 
-        </ul> 
-      </nav> 
-      <div class="content"> 
-        <h4>Hello, my name is</h4> 
-        <h1>Vipul <span>Pun</span></h1> 
-        <h3>Software Engineer</h3> 
-        <div class="newslatter"> 
-          <form> <input type="email" name="email" id="mail" placeholder="Enter Your Email"> <input type="submit" name="submit" value="Lets Start"> 
-          </form> 
-        </div> 
-      </div> 
-    </div> 
-<section id="about" class="about">
-  <div class="main">
-    <div class="about-text">
-      <h2 style="text-align: center;">About Me</h2>
-      <p>
-        I am a <strong>Software Engineer</strong> with hands-on experience in building and deploying
-        scalable web applications and APIs. Skilled in <b>ASP.NET Core, Angular, React,
-        Entity Framework, and Microsoft Identity</b>, with strong expertise in authentication,
-        authorization, and integration of third-party services.  
-        <br><br>
-        I have implemented real-world solutions such as <b>biometric attendance systems,
-        payment services, Kanban dashboards, and content management platforms</b>.
-        My greatest passion is leveraging technical know-how to solve problems
-        that benefit people and organizations.
-      </p>
-
-      <h3><i class="fas fa-user-graduate"></i> Education</h3>
-      <ul>
-        <li><strong>Bachelor in Computer Engineering</strong> – Himalaya College of Engineering (2017 – 2023)</li>
-        <li><strong>+2 Science</strong> – Trinity International College (2015 – 2017)</li>
-        <li><strong>School Leaving Certificate</strong> – Deep Jyoti Vidyashram (2005 – 2015)</li>
-      </ul>
-
-      <h3><i class="fas fa-laptop-code"></i> Technical Skills</h3>
-      <p>
-        <b>Backend:</b> ASP.NET Core MVC, Web API, Entity Framework, Identity, DDD<br>
-        <b>Frontend:</b> Angular, React, Tailwind, shadcn/ui<br>
-        <b>Databases:</b> SQL Server, EF Code-First<br>
-        <b>Tools & Testing:</b> xUnit, Moq, Integration Testing<br>
-        <b>Others:</b> Biometric Device Integration (ZKTeco), Stripe Payments, Image Storage Service
-      </p>
-
-      <h3><i class="fas fa-briefcase"></i> Highlight Projects</h3>
-      <ul>
-        <li>🔹 <b>Attendance System</b> – Integrated ZKTeco biometric device with .NET API.</li>
-        <li>🔹 <b>Authentication</b> – Google Login & token management with AspNetUserTokens.</li>
-        <li>🔹 <b>Task Dashboard</b> – Kanban system with real-time task tracking.</li>
-        <li>🔹 <b>Payment Service</b> – DDD-based Stripe integration with exception handling.</li>
-        <li>🔹 <b>Content Management</b> – CRUD with tags, media, and slugs.</li>
-      </ul>
-
-      <h3><i class="fas fa-address-book"></i> Contact</h3>
-      <p>
-        📞 Mobile: 9822533399, 9860979547 <br>
-        📧 Email: <a href="mailto:pm.vipul@gmail.com">pm.vipul@gmail.com</a>
-      </p>
-      <button type="button">Let's Talk</button>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vipul Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body>
+    <!-- Hero Section -->
+    <div class="hero">
+        <nav>
+            <h2 class="logo">Portfo<span>lio</span></h2>
+            <ul>
+                <li><a href="https://github.com/Vipulpm"><i class="fab fa-github"></i> Github</a></li>
+                <li><a href="https://www.linkedin.com/in/vipul-pun-7a8345246/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/vipul_pun/"><i class="fab fa-instagram"></i> Instagram</a></li>
+                <li><a href="https://www.youtube.com/channel/UCVuE0FEU_cf0NShaW15zs-w"><i class="fab fa-youtube"></i> Youtube</a></li>
+                <li><a href="#about">About Me</a></li>
+            </ul>
+        </nav>
+        <div class="content">
+            <h4>Hello, my name is</h4>
+            <h1>Vipul <span>Pun</span></h1>
+            <h3>Software Engineer</h3>
+        </div>
     </div>
-  </div>
-</section>
-    <footer> 
-      <div class="end">All Right Reserve &copy; Copyright By VipCode</div> 
-    </footer> 
-  </body> 
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="main">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>
+                    I am a <strong>Software Engineer</strong> with hands-on experience in building and deploying scalable web applications and APIs. Skilled in <b>ASP.NET Core, Angular, React, Entity Framework, and Microsoft Identity</b>, with strong expertise in authentication, authorization, and integration of third-party services.  
+                    <br><br>
+                    I have implemented real-world solutions such as <b>biometric attendance systems, payment services, Kanban dashboards, and content management platforms</b>. My greatest passion is leveraging technical know-how to solve problems that benefit people and organizations.
+                </p>
+
+                <h3><i class="fas fa-user-graduate"></i> Education</h3>
+                <ol>
+                    <li><strong>Bachelor in Computer Engineering</strong> – Himalaya College of Engineering (2017 – 2023)</li>
+                    <li><strong>+2 Science</strong> – Trinity International College (2015 – 2017)</li>
+                    <li><strong>School Leaving Certificate</strong> – Deep Jyoti Vidyashram (2005 – 2015)</li>
+                </ol>
+
+                <h3><i class="fas fa-laptop-code"></i> Technical Skills</h3>
+                <ol>
+                    <li><b>Backend:</b> ASP.NET Core MVC, Web API, Entity Framework, Identity, DDD</li>
+                    <li><b>Frontend:</b> ASP.Net Core MVC html & css</li>
+                    <li><b>Databases:</b> SQL Server, EF Code-First</li>
+                    <li><b>Tools & Testing:</b> xUnit, Moq, Integration Testing</li>
+                    <li><b>Others:</b> Biometric Device Integration (ZKTeco), Stripe Payments, Image Storage Service, IIS Hosting</li>
+                </ol>
+
+                <h3><i class="fas fa-briefcase"></i> Highlight Projects</h3>
+                <ol>
+                   <li><b>CRM Application</b> – Developed and maintained a Company Resource Management with **PDF/DOCX report generation** for efficient company resource tracking.</li>
+                    <li><b>IMS Application</b> – Implemented an Inventory Management System for real-time stock tracking and reporting.</li>
+                    <li><b>Attendance System</b> – Integrated ZKTeco biometric device with .NET API.</li>
+                    <li><b>Authentication</b> – Google Login & token management with AspNetUserTokens.</li>
+                    <li><b>Task Dashboard</b> – Kanban system with real-time task tracking.</li>
+                    <li><b>Payment Service</b> – DDD-based Stripe integration with exception handling.</li>
+                    <li><b>Content Management</b> – CRUD with tags, media, and slugs.</li>
+                </ol>
+
+                <h3><i class="fas fa-address-book"></i> Contact</h3>
+                <p>
+                    1. 📞 Mobile: 9822533399, 9860979547 <br>
+                    2. 📧 Email: <a href="mailto:pm.vipul@gmail.com">pm.vipul@gmail.com</a>
+                </p>
+                <button type="button">Let's Talk</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="end">All Rights Reserved &copy; VipCode</div>
+    </footer>
+</body>
 </html>
-
-
