--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
     <div class="hero">
         <nav>
             <h2 class="logo">Portfo<span>lio</span></h2>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </label>
             <ul>
-                <li><a href="https://github.com/Vipulpm"><i class="fab fa-github"></i> Github</a></li>
-                <li><a href="https://www.linkedin.com/in/vipul-pun-7a8345246/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                <li><a href="https://www.instagram.com/vipul_pun/"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li><a href="https://www.youtube.com/channel/UCVuE0FEU_cf0NShaW15zs-w"><i class="fab fa-youtube"></i> Youtube</a></li>
-                <li><a href="#about">About Me</a></li>
+              <li><a href="https://github.com/Vipulpm"><i class="fab fa-github"></i> Github</a></li>
+              <li><a href="https://www.linkedin.com/in/vipul-pun-7a8345246/"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+              <li><a href="https://www.instagram.com/vipul_pun/"><i class="fab fa-instagram"></i> Instagram</a></li>
+              <li><a href="https://www.youtube.com/channel/UCVuE0FEU_cf0NShaW15zs-w"><i class="fab fa-youtube"></i> Youtube</a></li>
+              <li><a href="#about">About Me</a></li>
             </ul>
-        </nav>
+          </nav>
         <div class="content">
             <h4>Hello, my name is</h4>
             <h1>Vipul <span>Pun</span></h1>
