--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="about-text">
                 <h2>About Me</h2>
                 <p>
-                    I am a <strong>Software Engineer</strong> with hands-on experience in building and deploying scalable web applications and APIs. Skilled in <b>ASP.NET Core, Angular, React, Entity Framework, and Microsoft Identity</b>, with strong expertise in authentication, authorization, and integration of third-party services.  
+                    I am a <strong>Software Engineer</strong> with hands-on experience in building and deploying scalable web applications and APIs. Skilled in <b>ASP.NET Core, Entity Framework, and Microsoft Identity</b>, with strong expertise in authentication, authorization, and integration of third-party services.  
                     <br><br>
                     I have implemented real-world solutions such as <b>biometric attendance systems, payment services, Kanban dashboards, and content management platforms</b>. My greatest passion is leveraging technical know-how to solve problems that benefit people and organizations.
                 </p>
@@ -90,3 +90,4 @@
     </footer>
 </body>
 </html>
+
